add is free flag

--- a/e-commerce_data/notebooks/01-JB-data_cleaning.ipynb
+++ b/e-commerce_data/notebooks/01-JB-data_cleaning.ipynb
@@ -770,6 +770,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check unit price <= zero\n",
+    "# Presumption: gift with purchase, add a flag\n",
+    "df['is_free'] = df.UnitPrice <= 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('O')"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# change data type invoice date\n",
+    "df['InvoiceDate']."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
