--- a/e-commerce_data/notebooks/01-JB-data_cleaning.ipynb
+++ b/e-commerce_data/notebooks/01-JB-data_cleaning.ipynb
@@ -7,17 +7,13 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
     "import datetime as dt\n",
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline\n",
     "pd.set_option('display.max_colwidth', -1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +141,7 @@
        "4  12/1/2010 8:26  3.39       17850.0     United Kingdom  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +161,7 @@
        "(541909, 8)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +225,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +348,7 @@
        "1446  12/1/2010 14:32  1.66      NaN          United Kingdom  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +472,7 @@
        "1987 NaN          United Kingdom  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +493,7 @@
        "0.0"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +523,7 @@
        "dtype('O')"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -650,7 +646,7 @@
        "237  12/1/2010 10:24  0.29       17548.0     United Kingdom  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -663,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -672,7 +668,7 @@
        "(9291, 8)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -683,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -694,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -746,7 +742,7 @@
        "       '????damages????', 'mixed up', 'lost'], dtype=object)"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -760,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -770,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -781,23 +777,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# change data type invoice date\n",
+    "df['InvoiceDate'] = pd.to_datetime(df['InvoiceDate'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "dtype('O')"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 530690 entries, 0 to 541908\n",
+      "Data columns (total 9 columns):\n",
+      "InvoiceNo      530690 non-null object\n",
+      "StockCode      530690 non-null object\n",
+      "Description    530690 non-null object\n",
+      "Quantity       530690 non-null int64\n",
+      "InvoiceDate    530690 non-null datetime64[ns]\n",
+      "UnitPrice      530690 non-null float64\n",
+      "CustomerID     397924 non-null float64\n",
+      "Country        530690 non-null object\n",
+      "is_free        530690 non-null bool\n",
+      "dtypes: bool(1), datetime64[ns](1), float64(2), int64(1), object(4)\n",
+      "memory usage: 36.9+ MB\n"
+     ]
     }
    ],
    "source": [
-    "# change data type invoice date\n",
-    "df['InvoiceDate']."
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save clean data in a new flat file\n",
+    "df.to_csv('../data/processed/data_processed.csv', encoding = 'utf-8', index=False)"
    ]
   },
   {
